<?xml version="1.0"?>
<package format="2">
  <name>rv_panda_driver</name>
  <version>0.1.0</version>
  <description>The rv_panda_driver package</description>
  
  <maintainer email="g.suddrey@qut.edu.au">Gavin Suddrey</maintainer>
  <license>BSD</license>

  <url type="website">http://robotics.qut.edu.au</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rv_manipulation_commander</depend>
  <depend>franka_hw</depend>
  <depend>franka_msgs</depend>
  <depend>franka_control</depend>
  <depend>franka_gripper</depend>
  <depend>franka_description</depend>
  <depend>controller_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rv_panda_moveit_config</depend>

  <export>
    <controller_interface plugin="${prefix}/config/rv_panda_driver_plugin.xml"/>
  </export>
</package>
